--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
         eos maxime atque necessitatibus, quis modi saepe delectus 
         provident repellat, consectetur veniam voluptates?
     </p>
+    <div id="bg-demo">
+    </div>
 </body>
 </html>
