--- a/index.html
+++ b/index.html
@@ -14,13 +14,26 @@
         eos maxime atque necessitatibus, quis modi saepe delectus 
         provident repellat, consectetur veniam voluptates?
     </p>
+
     <p id="demo-2">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         Rem doloribus architecto optio ipsum fuga veritatis ad harum 
         eos maxime atque necessitatibus, quis modi saepe delectus 
         provident repellat, consectetur veniam voluptates?
     </p>
+
     <div id="bg-demo">
     </div>
+
+    <p id="demo-3">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Rem doloribus architecto optio ipsum fuga veritatis ad harum 
+        eos maxime atque necessitatibus, quis modi saepe delectus 
+        provident repellat, consectetur veniam voluptates?
+    </p>
+
+    <div id="z-index-demo-1"></div>
+    <div id="z-index-demo-2"></div>
+    <div id="z-index-demo-3"></div>
 </body>
 </html>
